testsuite/tests/linear/should_fail/LinearLet.stderr

LinearLet.hs:5:3: error:
    • Couldn't match type ‘'GHC.Types.Omega’ with ‘'GHC.Types.One’
        arising from an application
    • In an equation for ‘f’: f x = let y = x in (y, y)
